# Snake

./: CMakeLists.txt  README.rst  Snake.cpp
include/: Coords.h
test/: CMakeLists.txt  test-Coords.cpp
